--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <div class="container" id="loginPage">
         <div class="card">
             <div class="logo-container">
-                <img src="logo-sans-fond.jpg" alt="Autovox Logo">
+                <img src="logo sans fond.jpg" alt="Autovox Logo">
             </div>
             <h1>Autovox</h1>
             <p class="subtitle">Gestion automobile premium</p>
@@ -387,7 +387,7 @@
         <div class="header">
             <div class="header-brand">
                 <div class="header-logo">
-                    <img src="logo-sans-fond.jpg" alt="Autovox">
+                    <img src="logo sans fond.jpg" alt="Autovox">
                 </div>
                 <h2>Dashboard</h2>
             </div>
