--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
         }
         
         .logo-badge {
-            width: 120px;
-            height: 120px;
+            width: 320px;
+            height: 90px;
             background: linear-gradient(135deg, #191970 0%, #1e2875 100%);
-            border-radius: 24px;
+            border-radius: 18px;
             display: flex;
             align-items: center;
             justify-content: center;
             box-shadow: 0 15px 40px rgba(25,25,112,0.35);
-            padding: 20px;
+            padding: 18px 30px;
             position: relative;
             overflow: hidden;
         }
@@ -365,7 +365,7 @@
         
         @media (max-width: 768px) {
             .card { padding: 40px 32px; }
-            .logo-badge { width: 100px; height: 100px; }
+            .logo-badge { width: 280px; height: 80px; padding: 14px 24px; }
             .subtitle { font-size: 15px; }
             .header { 
                 flex-direction: column; 
