--- a/index.html
+++ b/index.html
@@ -284,10 +284,8 @@
         }
 
         .header-logo-icon {
-            width: 40px;
-            height: 40px;
-            background: linear-gradient(135deg, var(--primary), #1e40af);
-            border-radius: 10px;
+            width: 70px;
+            height: 70px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -301,9 +299,7 @@
         }
 
         .header-logo-text {
-            font-size: 20px;
-            font-weight: 700;
-            white-space: nowrap;
+            display: none;
         }
 
         .header-nav {
@@ -879,8 +875,9 @@
 
         /* === RESPONSIVE === */
         @media (max-width: 768px) {
-            .header-logo-text {
-                display: none;
+            .header-logo-icon {
+                width: 50px;
+                height: 50px;
             }
 
             .header-nav {
