--- a/index.html
+++ b/index.html
@@ -1262,6 +1262,13 @@
                                     <option value="Pneus">Pneus</option>
                                     <option value="Contrôle technique">Contrôle technique</option>
                                     <option value="Autre">Autre</option>
+                                    <option value="">Tous</option>
+                                    <option value="Réparation">Réparation</option>
+                                    <option value="Entretien">Entretien</option>
+                                    <option value="Peinture">Peinture</option>
+                                    <option value="Pneus">Pneus</option>
+                                    <option value="Contrôle technique">Contrôle technique</option>
+                                    <option value="Autre">Autre</option>
                                 </select>
                             </div>
                         </div>
