--- a/index.html
+++ b/index.html
@@ -1256,18 +1256,18 @@
                                 <label>Type de frais</label>
                                 <select id="filterTypeFrais" onchange="filterFrais()">
                                     <option value="">Tous</option>
-                                    <option value="Réparation">Réparation</option>
-                                    <option value="Entretien">Entretien</option>
-                                    <option value="Peinture">Peinture</option>
-                                    <option value="Pneus">Pneus</option>
-                                    <option value="Contrôle technique">Contrôle technique</option>
-                                    <option value="Autre">Autre</option>
                                     <option value="">Tous</option>
-                                    <option value="Réparation">Réparation</option>
-                                    <option value="Entretien">Entretien</option>
+                                    <option value="Pièces et main d'œuvre">Pièces et main d'œuvre</option>
+                                    <option value="Carrosserie">Carrosserie</option>
+                                    <option value="Dépanneuse">Dépanneuse</option>
+                                    <option value="Frais administratifs">Frais administratifs</option>
+                                    <option value="Lavage">Lavage</option>
+                                    <option value="Essence">Essence</option>
                                     <option value="Peinture">Peinture</option>
                                     <option value="Pneus">Pneus</option>
                                     <option value="Contrôle technique">Contrôle technique</option>
+                                    <option value="Réparation">Réparation</option>
+                                    <option value="Entretien">Entretien</option>
                                     <option value="Autre">Autre</option>
                                 </select>
                             </div>
