--- a/index.html
+++ b/index.html
@@ -1255,17 +1255,17 @@
                             <div class="filter-group">
                                 <label>Type de frais</label>
                                 <select id="filterTypeFrais" onchange="filterFrais()">
-                                    <option value="">Tous</option>
+                                    <option value="">Sélectionnez</option>
                                     <option value="Pièces et main d'œuvre">Pièces et main d'œuvre</option>
-                                    <option value="Carrosserie">Carrosserie</option>
+                                    <option value="Carrosserie/Peinture">Carrosserie/Peinture</option>
                                     <option value="Dépanneuse">Dépanneuse</option>
-                                    <option value="Frais administratifs">Frais administratifs</option>
+                                    <option value="Déclaration d'achat">Déclaration d'achat</option>
+                                    <option value="Contrôle technique">Contrôle technique</option>
+                                    <option value="Annonce LeBonCoin">Annonce LeBonCoin</option>
+                                    <option value="Clés">Clés</option>
+                                    <option value="Pneus">Pneus</option>
                                     <option value="Lavage">Lavage</option>
                                     <option value="Essence">Essence</option>
-                                    <option value="Peinture">Peinture</option>
-                                    <option value="Pneus">Pneus</option>
-                                    <option value="Contrôle technique">Contrôle technique</option>
-                                    <option value="Réparation">Réparation</option>
                                     <option value="Entretien">Entretien</option>
                                     <option value="Autre">Autre</option>
                                 </select>
@@ -1585,15 +1585,15 @@
                        <select name="type" required>
                             <option value="">Sélectionnez</option>
                             <option value="Pièces et main d'œuvre">Pièces et main d'œuvre</option>
-                            <option value="Carrosserie">Carrosserie</option>
+                            <option value="Carrosserie/Peinture">Carrosserie/Peinture</option>
                             <option value="Dépanneuse">Dépanneuse</option>
-                            <option value="Frais administratifs">Frais administratifs</option>
+                            <option value="Déclaration d'achat">Déclaration d'achat</option>
+                            <option value="Contrôle technique">Contrôle technique</option>
+                            <option value="Annonce LeBonCoin">Annonce LeBonCoin</option>
+                            <option value="Clés">Clés</option>
+                            <option value="Pneus">Pneus</option>
                             <option value="Lavage">Lavage</option>
                             <option value="Essence">Essence</option>
-                            <option value="Peinture">Peinture</option>
-                            <option value="Pneus">Pneus</option>
-                            <option value="Contrôle technique">Contrôle technique</option>
-                            <option value="Réparation">Réparation</option>
                             <option value="Entretien">Entretien</option>
                             <option value="Autre">Autre</option>
                         </select>
