--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,16 @@
                             <div class="stat-card-value" id="beneficeTotal">0 €</div>
                             <div class="stat-card-subtitle">Avec frais déduits</div>
                         </div>
-
+                        
+                        <div class="stat-card" onclick="navigateToPage('caisse')">
+                            <div class="stat-card-header">
+                                <div class="stat-card-title">Caisse</div>
+                                <div class="stat-card-icon">💰</div>
+                            </div>
+                            <div class="stat-card-value" id="soldeCaisse">0 €</div>
+                            <div class="stat-card-subtitle">Solde disponible</div>
+                        </div>
+                        
                         <div class="stat-card" onclick="navigateToPage('statistiques')">
                             <div class="stat-card-header">
                                 <div class="stat-card-title">Statistiques</div>
