--- a/index.html
+++ b/index.html
@@ -1030,6 +1030,11 @@
                         <span class="nav-icon">💰</span>
                         <span>Frais</span>
                     </div>
+                    <div class="nav-link" data-page="caisse">
+                        <span class="nav-icon">💼</span>
+                        <span>Caisse</span>
+                    </div>
+
                     <div class="nav-link" data-page="ventes">
                         <span class="nav-icon">📈</span>
                         <span>Ventes</span>
