--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,11 @@
                 <span class="nav-icon">💰</span>
                 <span>Frais</span>
             </div>
+            <div class="mobile-menu-item" data-page="caisse">
+                <span class="nav-icon">💼</span>
+                <span>Caisse</span>
+            </div>
+
             <div class="mobile-menu-item" data-page="ventes">
                 <span class="nav-icon">📈</span>
                 <span>Ventes</span>
