--- a/index.html
+++ b/index.html
@@ -1823,6 +1823,7 @@
         let allClients = [];
         let allFrais = [];
         let allVentes = [];
+        let allCaisse = [];
         let chartCA = null;
         let chartBenefice = null;
         let chartVentes = null;
