--- a/index.html
+++ b/index.html
@@ -1951,6 +1951,8 @@
                 loadVentes();
             } else if (page === 'statistiques') {
                 loadCharts();
+            } else if (page === 'caisse') {
+                loadCaisse();
             }
         }
 
