--- a/index.html
+++ b/index.html
@@ -1712,10 +1712,10 @@
                 <div class="form-row">
                     <div class="input-group">
                         <label>Type de frais *</label>
-                       <select name="type" required>
+                        <select id="editFraisType" required>
                             <option value="">Sélectionnez</option>
-                            <option value="Pièces et main d'œuvre">Pièces et main d'œuvre</option>
-                            <option value="Carrosserie/Peinture">Carrosserie/Peinture</option>
+                            <option value="Pièces et main d'oeuvre">Pièces et main d'oeuvre</option>
+                            <option value="Carrosserie/peinture">Carrosserie/peinture</option>
                             <option value="Dépanneuse">Dépanneuse</option>
                             <option value="Déclaration d'achat">Déclaration d'achat</option>
                             <option value="Contrôle technique">Contrôle technique</option>
@@ -1725,7 +1725,7 @@
                             <option value="Lavage">Lavage</option>
                             <option value="Essence">Essence</option>
                             <option value="Entretien">Entretien</option>
-                            <option value="Autre">Autre</option>
+                            <option value="Autres">Autres</option>
                         </select>
                     </div>
                     <div class="input-group">
