--- a/index.html
+++ b/index.html
@@ -1772,12 +1772,18 @@
                         <label>Type de frais *</label>
                         <select id="editFraisType" required>
                             <option value="">Sélectionnez</option>
-                            <option value="Réparation">Réparation</option>
-                            <option value="Entretien">Entretien</option>
-                            <option value="Peinture">Peinture</option>
-                            <option value="Pneus">Pneus</option>
+                            <option value="Pièces et main d'oeuvre">Pièces et main d'oeuvre</option>
+                            <option value="Carrosserie/peinture">Carrosserie/peinture</option>
+                            <option value="Dépanneuse">Dépanneuse</option>
+                            <option value="Déclaration d'achat">Déclaration d'achat</option>
                             <option value="Contrôle technique">Contrôle technique</option>
-                            <option value="Autre">Autre</option>
+                            <option value="Annonce LeBonCoin">Annonce LeBonCoin</option>
+                            <option value="Clés">Clés</option>
+                            <option value="Pneus">Pneus</option>
+                            <option value="Lavage">Lavage</option>
+                            <option value="Essence">Essence</option>
+                            <option value="Entretien">Entretien</option>
+                            <option value="Autres">Autres</option>
                         </select>
                     </div>
                     <div class="input-group">
