--- a/index.html
+++ b/index.html
@@ -1712,7 +1712,7 @@
                 <div class="form-row">
                     <div class="input-group">
                         <label>Type de frais *</label>
-                        <select id="editFraisType" required>
+                        <select name="type" id="addFraisType" required>
                             <option value="">Sélectionnez</option>
                             <option value="Pièces et main d'oeuvre">Pièces et main d'oeuvre</option>
                             <option value="Carrosserie/peinture">Carrosserie/peinture</option>
