--- a/index.html
+++ b/index.html
@@ -1421,8 +1421,8 @@
                             <div class="filter-group">
                                 <label>Type de frais</label>
                                 <select id="filterTypeFrais" onchange="filterFrais()">
-                                    <option value="">Sélectionnez</option>
-                                    <option value="Pièces et main d'œuvre">Pièces et main d'œuvre</option>
+                                   <option value="">Sélectionnez</option>
+                                    <option value="Pièces et main d'oeuvre">Pièces et main d'oeuvre</option>
                                     <option value="Carrosserie/Peinture">Carrosserie/Peinture</option>
                                     <option value="Dépanneuse">Dépanneuse</option>
                                     <option value="Déclaration d'achat">Déclaration d'achat</option>
@@ -1790,7 +1790,7 @@
                         <select name="type" id="addFraisType" required>
                             <option value="">Sélectionnez</option>
                             <option value="Pièces et main d'oeuvre">Pièces et main d'oeuvre</option>
-                            <option value="Carrosserie/peinture">Carrosserie/peinture</option>
+                            <option value="Carrosserie/Peinture">Carrosserie/Peinture</option>
                             <option value="Dépanneuse">Dépanneuse</option>
                             <option value="Déclaration d'achat">Déclaration d'achat</option>
                             <option value="Contrôle technique">Contrôle technique</option>
@@ -1800,7 +1800,7 @@
                             <option value="Lavage">Lavage</option>
                             <option value="Essence">Essence</option>
                             <option value="Entretien">Entretien</option>
-                            <option value="Autres">Autres</option>
+                            <option value="Autre">Autre</option>
                         </select>
                     </div>
                     <div class="input-group">
@@ -1848,7 +1848,7 @@
                         <select id="editFraisType" required>
                             <option value="">Sélectionnez</option>
                             <option value="Pièces et main d'oeuvre">Pièces et main d'oeuvre</option>
-                            <option value="Carrosserie/peinture">Carrosserie/peinture</option>
+                            <option value="Carrosserie/Peinture">Carrosserie/Peinture</option>
                             <option value="Dépanneuse">Dépanneuse</option>
                             <option value="Déclaration d'achat">Déclaration d'achat</option>
                             <option value="Contrôle technique">Contrôle technique</option>
@@ -1858,7 +1858,7 @@
                             <option value="Lavage">Lavage</option>
                             <option value="Essence">Essence</option>
                             <option value="Entretien">Entretien</option>
-                            <option value="Autres">Autres</option>
+                            <option value="Autre">Autre</option>
                         </select>
                     </div>
                     <div class="input-group">
