--- a/index.html
+++ b/index.html
@@ -451,54 +451,55 @@
         }
 
         /* === MAIN CONTENT === */
-        .main-wrapper {
-            flex: 1;
-            overflow-y: auto;
-            overflow-x: hidden;
-            width: 100%;
-            max-width: 100vw;
-        }
+.main-wrapper {
+    flex: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
+}
 
-        .main-content {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 32px 24px;
-            width: 100%;
-        }
+.main-content {
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 32px 24px;
+    width: 100%;
+}
 
-        .page-content {
-            display: none;
-        }
+.page-content {
+    display: none;
+    padding: 0 24px; /* AJOUTÉ : Espacement gauche/droite */
+}
 
-        .page-content.active {
-            display: block;
-            animation: fadeIn 0.3s;
-        }
+.page-content.active {
+    display: block;
+    animation: fadeIn 0.3s;
+}
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+}
 
-        .page-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 32px;
-            flex-wrap: wrap;
-            gap: 16px;
-        }
+.page-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 32px;
+    flex-wrap: wrap;
+    gap: 16px;
+}
 
-        .page-header h1 {
-            font-size: 32px;
-            font-weight: 700;
-            margin-bottom: 4px;
-        }
+.page-header h1 {
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 4px;
+}
 
-        .page-header p {
-            color: var(--text-secondary);
-            font-size: 15px;
-        }
+.page-header p {
+    color: var(--text-secondary);
+    font-size: 15px;
+}
 
         /* === STATS CARDS (4 CARTES COMPACTES) === */
         .stats {
