--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,10 @@
                         <span class="nav-icon">💼</span>
                         <span>Caisse</span>
                     </div>
-
+                    <div class="nav-link" data-page="distributions">
+                        <span class="nav-icon">💸</span>
+                        <span>Distribution</span>
+                    </div>
                     <div class="nav-link" data-page="ventes">
                         <span class="nav-icon">📈</span>
                         <span>Ventes</span>
@@ -1278,7 +1281,10 @@
                 <span class="nav-icon">💼</span>
                 <span>Caisse</span>
             </div>
-
+            <div class="mobile-menu-item" data-page="distributions">
+                <span class="nav-icon">💸</span>
+                <span>Distribution</span>
+            </div>
             <div class="mobile-menu-item" data-page="ventes">
                 <span class="nav-icon">📈</span>
                 <span>Ventes</span>
@@ -1350,6 +1356,23 @@
                             <div class="stat-card-value" id="totalVentesCount">0</div>
                             <div class="stat-card-subtitle">Ventes ce mois</div>
                         </div>
+                        <div class="stat-card" onclick="navigateToPage('distributions')">
+    <div class="stat-card-header">
+        <div class="stat-card-title">Distribué</div>
+        <div class="stat-card-icon">💸</div>
+    </div>
+    <div class="stat-card-value" id="totalDistribue">0 €</div>
+    <div class="stat-card-subtitle">Retraits associés</div>
+</div>
+
+<div class="stat-card">
+    <div class="stat-card-header">
+        <div class="stat-card-title">Reste à partager</div>
+        <div class="stat-card-icon">✨</div>
+    </div>
+    <div class="stat-card-value" id="resteAPartager" style="color: var(--success);">0 €</div>
+    <div class="stat-card-subtitle">Bénéfice restant</div>
+</div>
                     </div>
 
                     <!-- WELCOME CARD -->
@@ -1430,6 +1453,28 @@
                                 ➕ Ajouter de l'argent
                             </button>
                         </div>
+                        <div class="page-content" id="pageDistributions">
+    <div class="page-header">
+        <div class="page-header-left">
+            <h1>💸 Distribution des bénéfices</h1>
+            <p>Suivi des retraits (Fouad, Tarek, Walid, Riad)</p>
+        </div>
+        <div class="page-header-right">
+            <button class="btn btn-small btn-warning" onclick="openAddDistribModal()">
+                ➕ Nouveau retrait
+            </button>
+        </div>
+    </div>
+
+    <!-- RÉCAP PAR PERSONNE -->
+    <div id="distribSummary" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 16px; margin-bottom: 30px;">
+        <!-- Sera rempli par le JavaScript -->
+    </div>
+
+    <div id="distributionsContainer">
+        <div class="loading">Chargement des distributions...</div>
+    </div>
+</div>
                     </div>
 
                     <!-- SOLDE ACTUEL EN GRAND -->
@@ -2030,6 +2075,41 @@
                 <button type="submit" class="btn">Enregistrer les modifications</button>
             </form>
         </div>
+        <!-- MODAL AJOUT DISTRIBUTION -->
+<div class="modal" id="modalAddDistrib">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2>💰 Enregistrer un retrait</h2>
+            <button class="modal-close" onclick="closeAddDistribModal()">✕</button>
+        </div>
+        <form id="formAddDistrib">
+            <div class="input-group">
+                <label>Date du retrait *</label>
+                <input type="date" id="distribDate" required>
+            </div>
+            <div class="form-row">
+                <div class="input-group">
+                    <label>Associé *</label>
+                    <select id="distribPersonne" required>
+                        <option value="Fouad">Fouad</option>
+                        <option value="Tarek">Tarek</option>
+                        <option value="Walid">Walid</option>
+                        <option value="Riad">Riad</option>
+                    </select>
+                </div>
+                <div class="input-group">
+                    <label>Montant (€) *</label>
+                    <input type="number" id="distribMontant" step="0.01" required>
+                </div>
+            </div>
+            <div class="input-group">
+                <label>Motif / Note</label>
+                <input type="text" id="distribMotif" placeholder="Ex: Retrait partiel bénéfice mars">
+            </div>
+            <button type="submit" class="btn btn-warning">Confirmer le retrait (Déduit de la caisse)</button>
+        </form>
+    </div>
+</div>
     </div>
     <script>
         // ========== ENREGISTREMENT SERVICE WORKER (PWA) ==========
