--- a/index.html
+++ b/index.html
@@ -2135,6 +2135,7 @@
         let chartCA = null;
         let chartBenefice = null;
         let chartVentes = null;
+        let allDistributions = [];
         
         // Initialiser Supabase
         function initSupabase() {
